--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-code-block-edit",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Vuepress plugin for demo-block & code-edit",
   "main": "src/index.js",
   "scripts": {
@@ -12,10 +12,10 @@
     "type": "git",
     "url": "https://github.com/wangziweng7890/vuepress-plugin-code-block-edit"
   },
-  "devDependencies": {
+  "dependencies": {
     "markdown-it-container": "3.0.0",
-    "vue-template-compiler": "^2.6.11",
-    "vue-codemirror": "^4.0.6"
+    "vue-codemirror": "4.0.6",
+    "vue-template-compiler": "2.6.11"
   },
   "keywords": [
     "vuepress-plugin",
