--- a/package.json
+++ b/package.json
@@ -12,10 +12,10 @@
     "type": "git",
     "url": "https://github.com/wangziweng7890/vuepress-plugin-code-block-edit"
   },
-  "devDependencies": {
+  "dependencies": {
     "markdown-it-container": "3.0.0",
-    "vue-template-compiler": "^2.6.11",
-    "vue-codemirror": "^4.0.6"
+    "vue-codemirror": "4.0.6",
+    "vue-template-compiler": "2.6.11"
   },
   "keywords": [
     "vuepress-plugin",
