--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vuepress-plugin-code-block-edit",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Vuepress plugin for demo-block & code-edit",
   "main": "src/index.js",
   "scripts": {
@@ -13,9 +13,7 @@
     "url": "https://github.com/wangziweng7890/vuepress-plugin-code-block-edit"
   },
   "dependencies": {
-    "markdown-it-container": "3.0.0",
-    "vue-codemirror": "4.0.6",
-    "vue-template-compiler": "2.6.11"
+    "vue-codemirror": "4.0.6"
   },
   "keywords": [
     "vuepress-plugin",
