--- a/package.json
+++ b/package.json
@@ -43,8 +43,5 @@
   "bugs": {
     "url": "https://github.com/wangziweng7890/vuepress-plugin-code-block-edit/issues"
   },
-  "homepage": "https://github.com/wangziweng7890/vuepress-plugin-code-block-edit#readme",
-  "devDependencies": {
-    "vuepress": "1.9.7"
-  }
+  "homepage": "https://github.com/wangziweng7890/vuepress-plugin-code-block-edit#readme"
 }
