--- a/package.json
+++ b/package.json
@@ -1,15 +1,17 @@
 {
   "name": "vuepress-plugin-code-block-edit",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Vuepress plugin for demo-block & code-edit",
   "main": "src/index.js",
   "bin": {
     "kfvuepress": "./bin/index.js"
   },
   "scripts": {
-    "docs:dev": "vuepress dev docs --debug --no-cache",
+    "docs:dev": "vuepress dev docs",
     "docs:build": "vuepress build docs",
-    "docs:build-preview": "vuepress build docs && anywhere -d docs/.vuepress/dist/"
+    "docs:build-preview": "vuepress build docs && anywhere -d docs/.vuepress/dist/",
+    "docs:init": "node ./bin/index.js init",
+    "plugin:dev": "vuepress dev docs --debug --no-cache"
   },
   "repository": {
     "type": "git",
