--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,10 @@
 .DS_Store
 node_modules
 /dist
-
-
 # local env files
 .env.local
 .env.*.local
-
+/docs
 # Log files
 npm-debug.log*
 yarn-debug.log*
